assets/css/base.scss
html {
  font-family: Helvetica, 'Helvetica Neue', -apple-system, BlinkMacSystemFont,
    'Segoe UI', Roboto, Arial, 'Noto Sans CJK TC', 'Noto Sans CJK',
    'Source Han Sans', 'PingFang TC', 'Hiragino Sans GB', 'Microsoft JhengHei',
    sans-serif;
  color: #333;
  overflow-x: hidden;
}

body {
  line-height: 1.5;
  letter-spacing: 0.86px;
  overflow-x: hidden;
  position: relative;
}

input,
button {
  color: inherit;
  font: inherit;
  outline: none;
}

input {
  letter-spacing: 0.48px;
}

button {
  letter-spacing: 0.86px;
  cursor: pointer;
}

a {
  cursor: pointer;
  text-decoration: none;
}

img {
  display: block;
  height: auto;
}

svg {
  height: auto;
}

strong {
  font-weight: 700;
}

